--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24.4'
+          
+      - name: Configure git for private modules
+        run: git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - name: Create dist directory
         run: mkdir -p dist
