--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
           git config --global url."https://${{ secrets.GROVE_PAT }}@github.com/".insteadOf "https://github.com/"
           go env -w GOPRIVATE=github.com/mattsolo1/*
           go env -w GOPROXY=direct
+          
+      - name: Update dependencies
+        run: |
+          rm -f go.sum
+          go mod download
+          go mod tidy
 
       - name: Create dist directory
         run: mkdir -p dist
