--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [ main ]
+    tags-ignore: [ 'v*' ]  # Skip CI when releasing
   pull_request:
     branches: [ main ]
 
@@ -17,6 +18,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24.4'
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
           
       - name: Configure git for private modules
         run: |
