--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24.4'
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
           
       - name: Configure git for private modules
         run: |
@@ -36,19 +44,8 @@ jobs:
         run: |
           make build-all VERSION=${{ github.ref_name }}
 
-      - name: Run unit tests
-        run: |
-          make test
-
-      - name: Build E2E test framework
-        run: |
-          make test-e2e-build
-
-      - name: Run E2E tests
-        run: |
-          make test-e2e
-        env:
-          CX_BINARY: ${{ github.workspace }}/bin/cx
+      # Tests already passed in CI before tagging
+      # Skipping tests saves ~5-10 minutes of build time
 
       - name: Generate checksums
         run: |
