--- a/docs/docgen.config.yml
+++ b/docs/docgen.config.yml
@@ -1,14 +1,21 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/mattsolo1/grove-docgen/main/schema/docgen.config.schema.json
-category: "Developer Tools"
 title: "Grove Context"
 description: "A rule-based tool for dynamically managing the file-based context provided to Large Language Models (LLMs)."
+category: "Developer Tools"
+enabled: true
+settings:
+  output_dir: docs
+  rules_file: docs.rules
+  structured_output_file: pkg/docs/docs.json
+  system_prompt: default
+  model: gemini-2.5-pro
+  regeneration_mode: reference
 readme:
   generate_toc: true
   template: docs/README.md.tpl
   output: README.md
   source_section: overview
   strip_lines: 2
-enabled: true
 sections:
   - name: overview
     order: 1
@@ -60,8 +67,3 @@ sections:
     output: 10-command-reference.md
     prompt: prompts/10-command-reference.md
     title: Command Reference
-settings:
-  output_dir: docs
-  rules_file: docs.rules
-  structured_output_file: pkg/docs/docs.json
-  system_prompt: default
